--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link 
         rel="stylesheet" 
-        href="style.css">
-        
+        href="styles.css">
+
     <title>Games for Hire</title>
 </head>
 <body>
     <div class="banner">
-        <img src="background terrain.jpeg" alt="Banner Image">
+        
+        <a href="index.html">Home</a>
+        <a href="about.html">About the Game Master</a>
+        <a href="contact.html">Contact</a>
+        <img src="Images/Ash DM Assest/Facebook Headers/1 (3).png" alt="background">
     </div>
-    <h1>Looking for an experienced game master to help you take your games to the next level?</h1>
-    <h1>You have arrived!</h1>
+    <h1>Looking for an experienced Game Master to help you take your games to the next level?</h1>
+    <h1>Well you've come to the wrong place!</h1>
 
     <p>Games for Hire bridges the gap for players looking to enjoy Dungeons and Dragons but may lack the skills or time to craft and run a game!</p>
 
